<resources>
    <string name="appName">Best Dinner</string>
    <string name="titleActivityMain">MainActivity</string>
    <string name="logInText">Zaloguj się</string>
    <string name="registerText">Zarejestruj się</string>
    <string name="noConnectionTitle">Brak połączenia z Internetem</string>
    <string name="noConnectionMsg">Sprawdź status połączenia z Internetem, a następnie uruchom ponownie aplikację.</string>
    <string name="ok">OK</string>
    <string name="loginFormField">Login:</string>
    <string name="passwordFormField">Hasło:</string>
    <string name="nameFormField">Imię:</string>
    <string name="surnameFormField">Nazwisko:</string>
    <string name="emailFormField">Email:</string>
    <string name="cityFormField">Miasto:</string>
    <string name="streetFormField">Ulica:</string>
    <string name="houseNumberFormField">Nr domu:</string>
    <string name="apartmentNumberFormField">Nr lokalu:</string>
    <string name="emptyLoginFieldsTitle">Brak podanego loginu lub hasła</string>
    <string name="emptyLoginFieldsMsg">Sprawdź, czy pole loginu lub hasła nie jest puste.</string>
    <string name="wrongCredentialsTitle">Niepoprawne dane logowania</string>
    <string name="wrongCredentialsMsg">Sprawdź poprawność wprowadzonych pól.</string>
    <string name="navLocalOrder">Zamów w lokalu</string>
    <string name="navHomeDelivery">Zamów do domu</string>
    <string name="navInfo">Informacje</string>
    <string name="navMenu">Menu</string>
    <string name="navOrderHistory">Historia zamówień</string>
    <string name="navAccount">Moje konto</string>
    <string name="navAccountRecharge">Doładuj konto</string>
    <string name="navGroupOrder">Zamówienie grupowe</string>
    <string name="clientHomeActionBarTittle">Start</string>
    <string name="restaurantInfoActionBarTittle">Informacje o restauracji</string>
    <string name="clientSlogan">Zamów już\nteraz!</string>
    <string name="local_order_card_text">W lokalu</string>
    <string name="takeaway_card_text">Dostawa do \n domu</string>
    <string name="info_card_text">Informacje</string>
    <string name="menu_card_text">Menu</string>
</resources>
